Footer and hyperlinks

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,3 +35,10 @@ h3 {
 .top h3 {
   color: white;
 }
+
+footer {
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left;
+}
